--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
   box-sizing: border-box;
 }
 body {
-  color: #333333;   
+  color: #000000;   
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: #c4dce1;                      /*change your Bkg color*/
+  background-color: #e4cec8;                      /*change your Bkg color*/
 }
 
 a, a:active, a:visited {
@@ -19,21 +19,21 @@ a, a:active, a:visited {
 
 
 footer {
-  border-top: 1px dotted #999999;
+  border-top: 1px dotted #a765c0;
   clear: both;
   padding: 1em 0;
 }
 
 footer p {
-  font-size: 18px;                 /*font size in footer*/
+  font-size: 20px;                 /*font size in footer*/
   padding: 0;
   margin: 0;
 }
 
 header {
-  background: #C8C1B7;
-  border-bottom: 1px solid #999999;
-  background-image: url("../img/gallerybanner.jpg"); /*change your banner image*/
+  background: #39567c;
+  border-bottom: 1px solid #a765c0;
+  background-image: url("../img/banner.jpg"); /*change your banner image*/
   height: 60px;
   position: relative;
   width: 100%;
@@ -47,7 +47,7 @@ header h1 {
 }
 
 header h1 a, header h1 a:visited, header h1 a:active {
-  color: #333333;
+  color: #3a0a28;
 }
 
 header nav ul {
@@ -78,7 +78,7 @@ header nav a, header nav a:visited {
   display: block;
   line-height: 60px;
   text-decoration: none;
-  color: #000000;                         /*changes banner text color*/
+  color: #ff00f6;                         /*changes banner text color*/
   transition: color 200ms ease-in-out;
 }
 
