--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,9 +1,9 @@
 
 body {
-  background-color: #c4dce1; /* change background color */
+  background-color: #ed88ae ; /* change background color */
   text-align: center;
-  color: #000;  /* change font color */
-  line-height: 36px;
+  color: #50cf96;  /* change font color */
+  line-height: 40px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
@@ -29,7 +29,7 @@ h1 {
 }
 
 #container {
-  background-image: url("../img/cement.jpg"); /* change */
+  background-image: url("../img/aoaoa.jpg"); /* change */
   min-height: 100%;
   max-width: 960px;
   margin: 0 auto;
